# LOOKEY

./: .gitignore  CMakeLists.txt  README.md
src/common/resource/: embedded-assets.cpp  embedded-assets.hpp
src/common/time/: time-source.cpp  time-source.hpp
src/functions/system/input-api/: input-api.cpp  input-api.hpp  input-event-codec.cpp  input-event-codec.hpp  input-event.hpp  input-key-code.cpp  input-key-code.hpp  keyboard-input-api.cpp  keyboard-input-api.hpp  mouse-input-api.cpp  mouse-input-api.hpp  windows-hook-session.cpp  windows-hook-session.hpp
src/functions/system/input-middleware/: input-semantics-middleware.cpp  input-semantics-middleware.hpp
src/layers/input-overlay-window/: input-overlay-layout.cpp  input-overlay-layout.hpp  input-overlay-render.cpp  input-overlay-render.hpp  input-overlay-theme.cpp  input-overlay-theme.hpp  input-overlay-window.cpp  input-overlay-window.hpp
src/layers/input-overlay-window/model/: history-buffer.cpp  history-buffer.hpp  overlay-frame-metrics.cpp  overlay-frame-metrics.hpp
src/layers/input-overlay-window/style/: style-sanitizer.cpp  style-sanitizer.hpp
src/layers/input-overlay-window/theme/: theme-config.cpp  theme-config.hpp
src/layers/main-window/: Keymera.rc  lookey.rc  main.cpp  tray-settings.hpp
